[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/Stat_Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/HPBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/resources/Fighter.tres" type="Resource" id=4]
[ext_resource path="res://assets/scripts/Fighter.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.2345, 32.0896 )

[node name="Fighter" type="KinematicBody2D"]
collision_layer = 33
collision_mask = 32
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.227451, 1, 1 )
texture = ExtResource( 1 )

[node name="stats" type="Node2D" parent="."]
script = ExtResource( 2 )
starting_stats = ExtResource( 4 )

[node name="HPBar" parent="." instance=ExtResource( 3 )]
margin_left = -84.8198
margin_top = 33.3641
margin_right = -84.4118
margin_bottom = 33.3641

[node name="DetectionRange" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="DetectionRange"]

[node name="MPBar" parent="." instance=ExtResource( 3 )]
margin_left = -84.9672
margin_top = 53.2672
margin_right = -84.8792
margin_bottom = 53.4672
healthy_color = Color( 0, 0.368627, 1, 1 )
caution_color = Color( 0.054902, 0.12549, 0.305882, 1 )
danger_color = Color( 0.0313726, 0, 0.243137, 1 )

[node name="hitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
